# quick-flask

./: INSTALL  LICENCE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
quick_flask/: __init__.py
quick_flask/cli/: app.py
quick_flask/core/: __init__.py  commands.py  createfile.py
quick_flask/utils/: version.py
