[metadata]
name = Quick-Flask
version = attr: quick_flask.__version__
project_urls=
    Source = https://github.com/bon-TI/quick-flask
description = Quick-Flask is a CLI for Flask applications.
long_description = file: README.md,
long_description_content_type = text/markdown
keywords = flask, cli, quick-flask, projects, setup
license = MIT
license_files = LICENSE
classifiers = 
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Natural Language :: English
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    
author = Jose Bolivar I
author_email = joseipaz1203@gmail.com

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.6
install_requires = 
    setuptools >= 50.0.0
    click >= 7.1.2

[options.entry_points]
console_scripts = 
    quick-flask = quick_flask.core:main 

[options.packages.find]
exclude = 
    tests
    tests.*
    *.tests
    *.tests.*
    docs
    docs.*
    *.docs

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist

